[project]
name = "opcua-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "speedbeesynapse-sccde>=0.1.11",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
build = "task build_vue && task pack"
dev = "task build_vue && uv run sccde serve --port 8123 --reload --verbose"
build_vue = "cd parameter_ui/opcua-server && npm install && npm run build"
pack = "uv run sccde make-package"
lint = "uvx ruff check source"
clean = "uv run build.py clean"
